<resources>
    <string name="app_name">Буклер</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Войти</string>
    <string name="error_login">Ошибка при авторизации!</string>
    <string name="empty_list">Список пуст</string>
    <string name="albums_list">Список альбомов</string>
    <string name="more">Еще</string>

    <string name="error_and_msg">Ошибка. %s</string>
    <string name="stale_warning">Нет подключения к интернету. Данные могут быть устаревшими.</string>
    <string name="error_title">Ошибка!</string>
    <string name="error_connect">Ошибка подключения</string>
    <string name="subscribe">Подписаться</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="main_screen">Главная</string>
    <string name="categories">Категории</string>
    <string name="news">Новинки</string>
    <string name="history">История</string>
    <string name="support">Техподдержка</string>
    <string name="search">Поиск</string>
    <string name="subscription_extended">Подписка успешно продлена!</string>
    <string name="share_message">Если Вам понравилось приложение расскажите про нас друзьям!</string>
    <string name="app_share_message">Я хочу порекомендовать Вам это приложение %s</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="message">Сообщение</string>
    <string name="send">Отправить</string>
    <string name="error_empty_field">Это поле не может быть пустым</string>
    <string name="error_email_invalid">Не корректный email</string>
    <string name="message_send">Сообщение отправлено</string>
    <string name="like">Лайкнуть</string>
    <string name="in_develop">Раздел в разработке.</string>
    <string name="error_load_album_image">Ошибка при загрузке изображения альбома.</string>
    <string name="error_share_album">Ошибка!</string>
    <string name="search_not_found">Ничего не найдено. Попробуйте уточнить запрос</string>
    <string name="inapp_init_error">Ошибка инициализации магазина.</string>
    <string name="inapp_query_error">Ошибка при запросе подписки</string>
    <string name="inapp_purch_error">Ошибка во время покупки. %s</string>
    <string name="inapp_cons_error">Ошибка при подтверждении покупки. %s</string>
    <string name="inapp_renew_error">Ошибка при продлении подписки. %s</string>
    <string name="inapp_succ">Спасибо! Доступ к книгам предоставлен до %s до 3.00 ночи. Приятного прослушивания!</string>
    <string name="free_greeting">%1$s! Спасибо за установку приложения. Для Вас активирован бесплатный доступ до %2$s до 3.00 ночи. Приятного прослушивания!</string>
    <string name="free_greeting_ext">%1$s! Доступ к книгам предоставлен до %2$s до 3.00 ночи. Приятного прослушивания!</string>
    <string name="free_greeting_unlim">%s! Вам предоставлен неограниченый доступ к контенту. Приятного прослушивания!</string>
    <string name="morning">Доброе утро</string>
    <string name="day">Добрый день</string>
    <string name="evening">Добрый вечер</string>
    <string name="night">Доброй ночи</string>
</resources>
