<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_library_music"
            android:title="@string/main_screen" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/ic_categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_support"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <group android:id="@+id/sub_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/subscribe" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>


</menu>
